Modificación de README.md

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <li>
                     <h3>Proyecto 1 (2018)</h3>
                     <p>
-                        Enseñando a programar a alguien especial...
+                        Enseñando a programar a alguien especial... <i class="bi bi-heartbreak"></i>
                     </p>
 
                     <div class=youtube-container>
@@ -87,10 +87,10 @@
                     <a class="project-link" href="https://www.youtube.com/watch?v=blSZL9MmzCQ"><i class="bi bi-youtube"></i> Ver más</a>
                 </li>
                 <li>
-                    <h3>Proyecto 2 (2022)</h3>
+                    <h3>Proyecto 2 (2019)</h3>
                     <p>
-                        Estudiar Licenciatura en Sistemas</p>
-                    <a class="project-link" href="#"><i class="bi bi-github"></i> Ver más</a>
+                        Best Singers All Times</p>
+                    <a class="project-link" href="https://lomejordejapon.herokuapp.com/"><i class="bi bi-link"></i> Ver más</a>
                 </li>
             </ul>
         </aside>
