--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <section id="home" class="content">
         <div class="half-section">
             <div class="avatar-container">
-                <img src="./assets/avatar.png" alt="">
-                <h3>"Yo, disfrutando de mi café..."</h3>
+                <img src="./assets/nami.png" alt="">
+                <h3>"uwu"</h3>
             </div>
         </div>
         <div class="half-section text-section">
@@ -61,7 +61,7 @@
                 Cocinero desde los 5 años, albañil, ingeniero en backend con tegnolog&iacute;as Java y estudiante de programaci&oacute;n.
             </p>
             <p>
-                Amo la Programaci&oacute;n, podr&iacute;a pasarme horas y horas programando hasta desmayarme.</p>
+                Amo la programaci&oacute;n, podr&iacute;a pasarme horas y horas programando hasta desmayarme.</p>
         </aside>
         <aside class="half-section title-section">
             <h2>Un poco sobre mí</h2>
@@ -89,7 +89,7 @@
                 <li>
                     <h3>Proyecto 2 (2019)</h3>
                     <p>
-                        Best Singers All Times</p>
+                        Primer proyecto Front-end</p>
                     <a class="project-link" href="https://lomejordejapon.herokuapp.com/"><i class="bi bi-link"></i> Ver más</a>
                 </li>
             </ul>
